# fordyca

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .gitmodules  .readthedocs.yml  .tags  .tags1  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  GitVersion.yml  LICENSE.md  README.md  VERSION  backtrace-1331573  backtrace-70443  backtrace-70604  backtrace-70722  backtrace-70739  backtrace-70810  backtrace1996093  backtrace1996597  backtrace726021  commitlint.config.js  fordyca-config.cmake  ideal_0  ideal_1  log4cxx.xml  package-lock.json  package.json  project-local.cmake  todo.org
.githooks/: commit-msg
cmake/: config.cmake.in  project-local.cmake
docs/: Doxyfile.in  Makefile  conf.py  controller-xml-configuration.md  fsm-tutorial.md  index.rst  loop-functions-xml-configuration.md  mainpage.hpp  parameters.md  parser-tutorial.md  release-notes.md  requirements.txt  tutorials.md
docs/config/: controllers.rst  index.rst  loop-functions.rst
docs/contributing/: index.rst  parser-tutorial.rst
docs/setup/: build.rst  index.rst  local-runtime.rst  msi.rst
energy_stuff/: energy_partitioning_controller.cpp  energy_partitioning_controller.hpp
exp/: backtrace-3990  backtrace-4113  backtrace-4549  backtrace-4554  backtrace-90262  base-foraging.argos  benchmark-single-source.argos  communication.argos  demo.argos  demo.launch  demo.params  energy_opt.argos  gazebo_demo.launch  ideal_0  ideal_1  random-foraging.argos  randomized.argos  single-source-foraging.argos  single-source.argos  social-foraging.argos  testing.argos  turtlebot3_demo_master.launch  turtlebot3_demo_robot.launch
ext/: cosm  rcppsw  rcsw
include/: argos3
include/fordyca/: actuator_manager.hpp  actuator_param_parser.hpp  base_param_parser.hpp  block_data.hpp  block_param_parser.hpp  expressions.hpp  food_param_parser.hpp  footbot_foraging.hpp  foraging_controller.hpp  foraging_fsm.hpp  foraging_loop_functions.hpp  fordyca.hpp  fordyca_params.hpp  fsm_param_parser.hpp  nsalias.hpp  parameter_manager.hpp  parameter_parser.hpp  params.hpp  qt_user_functions.hpp  sensor_manager.hpp  sensor_param_parser.hpp  social_foraging.hpp  social_foraging_controller.hpp  social_foraging_fsm.hpp  social_fsm.hpp  social_loop_functions.hpp  state_machine.hpp  sub_area.hpp  version.hpp
scripts/: benchmark.fish  bootstrap-ci.sh  bootstrap.sh  build-env-setup.sh  clone-and-build-clean.sh  energy.pbs  msi-build-default.sh  msi-build-deps.sh  msi-clone-all.sh  msi-clone-deps.sh  msi-deps-build.sh  msi-deps-clone.sh  msi-env-setup.sh  msi-fordyca-build.sh  msi-fordyca-clone.sh
src/: .tags  actuator_manager.cpp  actuator_param_parser.cpp  block.cpp  block_distributor.cpp  block_param_parser.cpp  cell2D.cpp  cell2D_fsm.cpp  dynamic_cell2D_fsm.cpp  dynamic_grid2D.cpp  food_param_parser.cpp  footbot_foraging.cpp  foraging_controller.cpp  foraging_fsm.cpp  foraging_loop_functions.cpp  foraging_qt_user_functions.cpp  fsm_param_parser.cpp  grid2D.cpp  grid_param_parser.cpp  gridsquare_fsm.cpp  logging_param_parser.cpp  loop_function_repository.cpp  loop_functions_param_parser.cpp  parameter_manager.cpp  parameter_parser.cpp  perceived_grid_param_parser.cpp  qt_user_functions.cpp  repository.cpp  sensor_manager.cpp  sensor_param_parser.cpp  social_foraging.cpp  social_foraging_controller.cpp  social_foraging_fsm.cpp  social_fsm.cpp  social_loop_functions.cpp  stat_collector.cpp  tags  version.cpp.in
src/config/: actuation_parser.cpp  base_controller_repository.cpp  battery_parser.cpp  communication_parser.cpp  exploration_parser.cpp  foraging_controller_repository.cpp  grid_parser.cpp  loop_function_repository.cpp  metrics_parser.cpp  output_parser.cpp  phototaxis_force_parser.cpp  proximity_sensor_parser.cpp  sensing_parser.cpp  steering_force2D_parser.cpp  visualization_parser.cpp
src/controller/: actuation_subsystem.cpp  actuator_manager.cpp  base_controller.cpp  base_foraging_controller.cpp  base_foraging_sensor_manager.cpp  base_foraging_sensors.cpp  base_perception_subsystem.cpp  base_sensing_subsystem.cpp  block_sel_matrix.cpp  block_selection_matrix.cpp  block_selector.cpp  block_target_selector.cpp  cache_sel_matrix.cpp  cache_selection_matrix.cpp  cache_site_selector.cpp  communication_subsystem.cpp  depth0_foraging_controller.cpp  depth0_foraging_sensor_manager.cpp  depth0_foraging_sensors.cpp  depth1_controller.cpp  depth1_foraging_controller.cpp  depth1_foraging_sensor_manager.cpp  depth1_foraging_sensors.cpp  dpo_perception_subsystem.cpp  ee_decision_matrix.cpp  ee_selector.cpp  energy_selector.cpp  energy_subsystem.cpp  energy_supervisor.cpp  existing_cache_selector.cpp  foraging_controller.cpp  foraging_fsm.cpp  kinematics_calculator.cpp  los_proc_verify.cpp  mdpo_perception_subsystem.cpp  memory_foraging_controller.cpp  motion_throttling_handler.cpp  oracular_info_receptor.cpp  phototaxis_force.cpp  random_explore_behavior.cpp  (+11 more)
src/diagnostics/: base_robot_stat_collector.cpp  base_stat_collector.cpp  block_stat_collector.cpp  cache_stat_collector.cpp  random_diagnostics_collector.cpp  robot_stat_collector.cpp
src/ds/: arena_map.cpp  block_list.cpp  block_vector.cpp  cache_list.cpp  cache_vector.cpp  cell2D.cpp  dp_block_map.cpp  dp_block_set.cpp  dp_cache_map.cpp  dp_cache_set.cpp  dpo_semantic_map.cpp  dpo_store.cpp  occupancy_grid.cpp  perceived_arena_map.cpp
src/events/: block_drop.cpp  block_found.cpp  block_pickup.cpp  block_proximity.cpp  block_vanished.cpp  cache_appeared.cpp  cache_block_drop.cpp  cache_found.cpp  cache_proximity.cpp  cache_vanished.cpp  cached_block_pickup.cpp  cell2D_empty.cpp  cell2D_unknown.cpp  cell_cache_extent.cpp  cell_empty.cpp  cell_perception.cpp  cell_unknown.cpp  free_block_drop.cpp  free_block_pickup.cpp  mech_malfunction.cpp  mech_repair.cpp  nest_block_drop.cpp  robot_cache_block_drop.cpp  robot_cached_block_pickup.cpp  robot_free_block_drop.cpp  robot_free_block_pickup.cpp  robot_nest_block_drop.cpp
src/expressions/: block_utility.cpp  (+3 more)
tests/: arena_map-test.cpp  block_distributor-test.cpp  cell2D-test.cpp  line_of_sight-test.cpp  perceived_cell2D-test.cpp
(+1999 files in other folders)
